--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     }
   },
   "dependencies": {
+    "@financial-times/pretty": "^3.0.1",
     "bootstrap": "^5.1.3",
     "electron-squirrel-startup": "^1.0.0",
     "fs-extra": "^10.0.1",
