--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@financial-times/pretty": "^3.0.1",
     "bootstrap": "^5.1.3",
     "electron-squirrel-startup": "^1.0.0",
+    "file-hierarchy": "^2.0.0",
     "fs-extra": "^10.1.0",
     "os-utils": "^0.0.14"
   },
