--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@financial-times/pretty": "^3.0.1",
     "bootstrap": "^5.1.3",
+    "electron-dialog": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-hierarchy": "^2.0.0",
     "fs-extra": "^10.1.0",
@@ -61,6 +62,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "electron": "18.0.1",
+    "minify": "^9.0.0",
     "png-to-ico": "^2.1.4"
   },
   "scriptMain": "/src/js/main.js"
